libs/pavex_macros/tests/post_process/fail/unreachable_pub.stderr
error: unreachable `pub` item
 --> tests/post_process/fail/unreachable_pub.rs:7:5
  |
7 |     pub fn a() -> A {
  |     ---^^^^^^^^^^^^
  |     |
  |     help: consider restricting its visibility: `pub(crate)`
  |
  = help: or consider exporting it for use by other crates
note: the lint level is defined here
 --> tests/post_process/fail/unreachable_pub.rs:6:5
  |
6 |     #[post_process(id = "A_")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `post_process` (in Nightly builds, run with -Z macro-backtrace for more info)
